syntax="proto3";

package Energieversorger;

service KomponentenData {

  rpc GetKomponentenIDs(Empty) returns (stream KomponentenIDs) {}

  rpc GetKomponente(KomponentenIDs) returns (stream Komponente) {}

}

message Empty {

}

message KomponentenIDs {
  int32 id = 1;
}

message Komponente {
    string type = 1;
    string name = 2;
    int32 id = 3;
    bool status = 4;
    KomponentenWerte values = 5;
}

message KomponentenWerte {
   int64 time = 1;
   double value = 2;
}
